adjust actions column in admin table and update actions button layout

--- a/admin.html
+++ b/admin.html
@@ -76,7 +76,7 @@
               <th scope="col">Роля</th>
               <th scope="col">Създаден</th>
               <th scope="col">Последен вход</th>
-              <th scope="col">Действия</th>
+              <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
             </tr>
           </thead>
           <tbody id="admin-users-body">
