--- a/admin.html
+++ b/admin.html
@@ -306,20 +306,20 @@
                 <dt class="col-sm-4">Регистриран</dt>
                 <dd class="col-sm-8" id="view-user-created">-</dd>
             </dl>
-            
-            <hr>
-            
-            <h6 class="mb-3">Управление на роля</h6>
-            <div class="d-flex gap-2 align-items-center">
-                <select class="form-select" id="view-user-role-select">
+              <div id="view-user-role-section">
+                <hr>
+                <h6 class="mb-3">Управление на роля</h6>
+                <div class="d-flex gap-2 align-items-center">
+                  <select class="form-select" id="view-user-role-select">
                     <option value="user">Потребител</option>
                     <option value="moderator">Модератор</option>
                     <option value="admin">Администратор</option>
-                </select>
-                <button class="btn btn-primary text-nowrap" id="btn-update-user-role">Запази роля</button>
-            </div>
-            <div class="form-text text-muted mt-2">
-                Внимание: Промяната на роля влияе веднага върху достъпа на потребителя.
+                  </select>
+                  <button class="btn btn-primary text-nowrap" id="btn-update-user-role">Запази роля</button>
+                </div>
+                <div class="form-text text-muted mt-2">
+                  Внимание: Промяната на роля влияе веднага върху достъпа на потребителя.
+                </div>
             </div>
         </div>
         <div class="modal-footer">
