--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
   
   <main class="container py-4" id="page-content" style="display: none;">
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>Админ Панел</h1>
+        <h1 id="dashboard-title">Админ Панел</h1>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createArticleModal">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg me-2" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2z"/>
@@ -43,7 +43,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-3">
+            <div class="col-md-3" id="admin-users-stat-card">
               <div class="card text-white bg-info mb-3">
                   <div class="card-header">Потребители</div>
                   <div class="card-body">
@@ -63,28 +63,30 @@
           </div>
       </div>
 
-      <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
-        <h2 class="mb-0">Управление на потребители</h2>
-        <button class="btn btn-outline-primary" id="btn-refresh-users" type="button">Обнови списъка</button>
-      </div>
-      <div class="table-responsive">
-        <table class="table table-striped table-hover align-middle" id="admin-users-table">
-          <thead>
-            <tr>
-              <th scope="col">Име</th>
-              <th scope="col">Имейл</th>
-              <th scope="col">Роля</th>
-              <th scope="col">Създаден</th>
-              <th scope="col">Последен вход</th>
-              <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
-            </tr>
-          </thead>
-          <tbody id="admin-users-body">
-            <tr>
-              <td colspan="6" class="text-center text-muted py-4">Зареждане на потребители...</td>
-            </tr>
-          </tbody>
-        </table>
+      <div id="admin-users-section">
+        <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
+          <h2 class="mb-0">Управление на потребители</h2>
+          <button class="btn btn-outline-primary" id="btn-refresh-users" type="button">Обнови списъка</button>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover align-middle" id="admin-users-table">
+            <thead>
+              <tr>
+                <th scope="col">Име</th>
+                <th scope="col">Имейл</th>
+                <th scope="col">Роля</th>
+                <th scope="col">Създаден</th>
+                <th scope="col">Последен вход</th>
+                <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
+              </tr>
+            </thead>
+            <tbody id="admin-users-body">
+              <tr>
+                <td colspan="6" class="text-center text-muted py-4">Зареждане на потребители...</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
       
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
