add pending report status button and update report management functionality

--- a/admin.html
+++ b/admin.html
@@ -365,6 +365,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Затвори</button>
+          <button type="button" class="btn btn-outline-warning" id="btn-pending-report">Маркирай като чакащ</button>
           <button type="button" class="btn btn-outline-danger" id="btn-reject-report">Отхвърли</button>
           <button type="button" class="btn btn-success" id="btn-approve-report">Добави като потвърдена</button>
         </div>
