--- a/news.html
+++ b/news.html
@@ -66,7 +66,7 @@
   </div>
 
   <main class="container mb-5" id="page-content">
-      <div id="articles-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <div id="articles-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
         <!-- Articles will be injected here -->
       </div>
       
@@ -122,7 +122,7 @@
                  <span class="category-badge">Category</span>
                  <!-- Date moved here if desired, but I'll stick to bottom meta -->
               </div>
-              <h5 class="article-title text-dark line-clamp-2">Title</h5>
+              <h5 class="article-title line-clamp-2">Title</h5>
               <p class="article-excerpt line-clamp-3">Excerpt</p>
               
               <div class="article-meta">
