refactor article title styles for improved readability and consistency

--- a/community.html
+++ b/community.html
@@ -53,7 +53,7 @@
               <span class="community-date">Дата</span>
             </span>
           </div>
-          <h3 class="article-title text-dark line-clamp-2 mb-2">Заглавие</h3>
+          <h3 class="article-title line-clamp-2 mb-2">Заглавие</h3>
           <p class="article-excerpt line-clamp-3 mb-3">Описание</p>
           <div class="article-meta">
             <span class="meta-item">
