refactor styles for recent checks and badges to enhance visual appeal and consistency

--- a/scam-check.html
+++ b/scam-check.html
@@ -43,15 +43,15 @@
                <div class="recent-checks-list">
                   <div class="recent-check-item">
                       <span class="check-target"><i class="bi bi-globe"></i> suspicious-bank-login.com</span>
-                      <span class="badge bg-danger-subtle text-danger border border-danger rounded-pill">Съмнителен</span>
+                      <span class="badge bg-danger text-white border border-danger-subtle rounded-pill">Съмнителен</span>
                   </div>
                   <div class="recent-check-item">
                       <span class="check-target"><i class="bi bi-telephone"></i> +359 876 543 210</span>
-                      <span class="badge bg-success-subtle text-success border border-success rounded-pill">Безопасен</span>
+                      <span class="badge bg-success text-white border border-success-subtle rounded-pill">Безопасен</span>
                   </div>
                   <div class="recent-check-item">
                       <span class="check-target"><i class="bi bi-globe"></i> cheap-iphones-now.net</span>
-                      <span class="badge bg-warning-subtle text-warning border border-warning rounded-pill">Непотвърден</span>
+                      <span class="badge bg-warning text-dark border border-warning-subtle rounded-pill">Непотвърден</span>
                   </div>
                </div>
           </div>
