--- a/index.html
+++ b/index.html
@@ -107,6 +107,54 @@
           color: #ffc107 !important;
           border: 1px solid rgba(255, 193, 7, 0.45);
         }
+          .home-popup-title {
+            margin: 0;
+            line-height: 1.1;
+            letter-spacing: 0.015em;
+          }
+          .home-popup-title-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.35rem;
+            font-weight: 800;
+            font-size: clamp(1.8rem, 1.5rem + 0.8vw, 2.25rem);
+            color: inherit;
+            text-decoration: none;
+            position: relative;
+            background-image: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
+            background-size: 0% 100%;
+            background-repeat: no-repeat;
+            -webkit-background-clip: text;
+            background-clip: text;
+            transition: transform 0.22s ease, opacity 0.22s ease;
+          }
+          .home-popup-title-link::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -0.28rem;
+            width: 100%;
+            height: 0.16rem;
+            border-radius: 999px;
+            background: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
+            transform: scaleX(0.35);
+            transform-origin: left center;
+            opacity: 0.9;
+            transition: transform 0.25s ease;
+          }
+          .home-popup-title-link:hover,
+          .home-popup-title-link:focus-visible {
+            transform: translateY(-1px);
+            opacity: 1;
+            color: transparent;
+            -webkit-text-fill-color: transparent;
+            background-size: 100% 100%;
+            text-decoration: none;
+          }
+          .home-popup-title-link:hover::after,
+          .home-popup-title-link:focus-visible::after {
+            transform: scaleX(1);
+          }
         .home-popup-theme .btn-outline-secondary {
           border-color: rgba(255, 255, 255, 0.38);
           color: #e5eefb;
@@ -158,8 +206,8 @@
               <div class="feature-icon feature-icon-news mb-0">
                 <i class="bi bi-lightning-charge-fill"></i>
               </div>
-              <h2 class="fw-bold mb-0">
-                <a href="news.html" class="text-reset text-decoration-none">Последни новини</a>
+              <h2 class="home-popup-title">
+                <a href="news.html" class="home-popup-title-link">Последни новини</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
@@ -186,8 +234,8 @@
             <div class="feature-icon bg-success-subtle text-success mb-0">
                 <i class="bi bi-people-fill"></i>
             </div>
-            <h2 class="fw-bold mb-0">
-              <a href="community.html" class="text-reset text-decoration-none">Общност</a>
+            <h2 class="home-popup-title">
+              <a href="community.html" class="home-popup-title-link">Общност</a>
             </h2>
           </div>
           <p class="text-muted mb-3">Споделете своя опит и помогнете на другите да се предпазят. Заедно сме по-силни срещу онлайн заплахите.</p>
