--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg me-2" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2z"/>
             </svg>
-            Добави Новина
+            Добави Съвет
         </button>
       </div>
        
@@ -114,7 +114,7 @@
       </div>
 
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
-        <h2 class="mb-0">Управление на новини</h2>
+        <h2 class="mb-0">Управление на съвети</h2>
         <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
       </div>
       <div class="table-responsive">
@@ -130,7 +130,7 @@
           </thead>
           <tbody id="admin-articles-body">
             <tr>
-              <td colspan="5" class="text-center text-muted py-4">Зареждане на новини...</td>
+              <td colspan="5" class="text-center text-muted py-4">Зареждане на съвети...</td>
             </tr>
           </tbody>
         </table>
@@ -142,7 +142,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="createArticleModalLabel">Добавяне на нова новина</h5>
+          <h5 class="modal-title" id="createArticleModalLabel">Добавяне на нов съвет</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -197,7 +197,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отказ</button>
-          <button type="button" class="btn btn-primary" id="btn-save-article">Запази новината</button>
+          <button type="button" class="btn btn-primary" id="btn-save-article">Запази съвета</button>
         </div>
       </div>
     </div>
@@ -207,7 +207,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editArticleModalLabel">Редакция на новина</h5>
+          <h5 class="modal-title" id="editArticleModalLabel">Редакция на съвет</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -270,7 +270,7 @@
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="viewArticleModalLabel">Преглед на новина</h5>
+          <h5 class="modal-title" id="viewArticleModalLabel">Преглед на съвет</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
