--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
             <div class="d-flex align-items-center gap-3 mb-3">
               <div class="feature-icon feature-icon-news mb-0">
                 <span class="news-logo-icon" aria-hidden="true">
-                  <span class="news-logo-badge">НОВИНИ</span>
+                  <span class="news-logo-badge">СЪВЕТИ</span>
                 </span>
               </div>
               <h2 class="home-popup-title">
-                <a href="news.html" class="home-popup-title-link">Последни новини</a>
+                <a href="news.html" class="home-popup-title-link">Последни съвети</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
@@ -266,7 +266,7 @@
             </div>
 
             <a class="btn btn-warning w-100 mt-3 rounded-pill" href="news.html">
-              <i class="bi bi-newspaper me-2"></i>Виж всички новини
+              <i class="bi bi-newspaper me-2"></i>Виж всички съвети
             </a>
           </div>
         </div>
