--- a/news-details.html
+++ b/news-details.html
@@ -5,7 +5,7 @@
   <meta name="google" content="notranslate" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StaySafeBG - Детайли за новина</title>
+  <title>StaySafeBG - Детайли за съвет</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./src/styles/theme.css">
   <link rel="stylesheet" href="./src/styles/app.css">
@@ -16,8 +16,8 @@
   <main class="container py-4" id="page-content">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="news.html">Новини</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Заглавие на новината</li>
+          <li class="breadcrumb-item"><a href="news.html">Съвети</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Заглавие на съвета</li>
         </ol>
       </nav>
       
@@ -25,7 +25,7 @@
         <h2 class="blog-post-title mb-1">Пълно ръководство за фишинг</h2>
         <p class="blog-post-meta text-muted">1 януари 2026 от <a href="#">Админ</a></p>
 
-        <p>Това е примерно съдържание на цялата новина. В реално приложение, това съдържание ще се зарежда динамично на база ID от URL адреса.</p>
+        <p>Това е примерно съдържание на целия съвет. В реално приложение, това съдържание ще се зарежда динамично на база ID от URL адреса.</p>
         <hr>
         <p>Фишингът е киберпрестъпление, при което целта или целите се свързват по имейл, телефон или текстово съобщение от някой, представящ се за легитимна институция, за да подмами хората да предоставят чувствителни данни като лична информация, данни за банкиране и кредитни карти, и пароли.</p>
         <h3>Как да предотвратим фишинг атаки</h3>
@@ -37,7 +37,7 @@
       </article>
       
       <div class="mt-5">
-            <a href="news.html" class="btn btn-secondary">Обратно към новините</a>
+        <a href="news.html" class="btn btn-secondary">Обратно към съветите</a>
       </div>
   </main>
   
