--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   <meta name="google" content="notranslate" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StaySafeBG - Новини</title>
+  <title>StaySafeBG - Съвети</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./src/styles/theme.css">
@@ -19,17 +19,17 @@
     <div class="container">
       <div class="articles-page-indicator">
         <div class="articles-page-title-wrap">
-          <h1 class="articles-page-title mb-1">Новини</h1>
+          <h1 class="articles-page-title mb-1">Съвети</h1>
         </div>
         <div class="articles-page-title-line" tabindex="0" aria-label="Акцентна линия за заглавието"></div>
-        <p class="articles-page-subtitle mb-0">Актуални новини и анализи за онлайн сигурност</p>
+        <p class="articles-page-subtitle mb-0">Актуални съвети и анализи за онлайн сигурност</p>
       </div>
 
       <div class="row g-3 align-items-center justify-content-between">
         <!-- Search -->
         <div class="col-md-5 col-lg-5 search-container">
           <div class="input-group search-input-group">
-            <input type="text" id="params-search" class="form-control" placeholder="Търсене на новини..." aria-label="Търсене">
+            <input type="text" id="params-search" class="form-control" placeholder="Търсене на съвети..." aria-label="Търсене">
             <button class="btn ss-search-btn" type="button" aria-label="Търси">
                 <i class="bi bi-search"></i>
             </button>
@@ -81,7 +81,7 @@
       <!-- Load More / Spinner -->
       <div class="text-center mt-5 d-none" id="load-more-container">
          <button id="btn-load-more" class="btn btn-primary px-4 py-2 rounded-pill">
-            Зареди още новини
+          Зареди още съвети
          </button>
       </div>
        <div class="text-center mt-5 d-none" id="loading-spinner">
