Add tips service, styles, and HTML pages for tips section
- Implemented `tipsService.js` for managing articles including fetching, creating, updating, and deleting articles.
- Created `tips.css` for styling the tips section with a modern UI.
- Added `tips.html` and `tips-details.html` for displaying the list of tips and individual tip details respectively.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </span>
               </div>
               <h2 class="home-popup-title">
-                <a href="news.html" class="home-popup-title-link">Последни съвети</a>
+                <a href="tips.html" class="home-popup-title-link">Последни съвети</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
@@ -265,7 +265,7 @@
                 </div>
             </div>
 
-            <a class="btn btn-warning w-100 mt-3 rounded-pill" href="news.html">
+            <a class="btn btn-warning w-100 mt-3 rounded-pill" href="tips.html">
               <i class="bi bi-newspaper me-2"></i>Виж всички съвети
             </a>
           </div>
