--- a/tips-details.html
+++ b/tips-details.html
@@ -16,7 +16,7 @@
   <main class="container py-4" id="page-content">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="news.html">Съвети</a></li>
+          <li class="breadcrumb-item"><a href="tips.html">Съвети</a></li>
           <li class="breadcrumb-item active" aria-current="page">Заглавие на съвета</li>
         </ol>
       </nav>
@@ -37,13 +37,13 @@
       </article>
       
       <div class="mt-5">
-        <a href="news.html" class="btn btn-secondary">Обратно към съветите</a>
+        <a href="tips.html" class="btn btn-secondary">Обратно към съветите</a>
       </div>
   </main>
   
   <footer id="app-footer"></footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script type="module" src="./src/pages/newsDetailsPage.js"></script>
+  <script type="module" src="./src/pages/tipsDetailsPage.js"></script>
 </body>
 </html>
