--- a/community.html
+++ b/community.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./src/styles/theme.css">
   <link rel="stylesheet" href="./src/styles/app.css">
-  <link rel="stylesheet" href="./src/styles/news.css">
+  <link rel="stylesheet" href="./src/styles/tips.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <header id="app-header"></header>
