--- a/tips.html
+++ b/tips.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./src/styles/theme.css">
   <link rel="stylesheet" href="./src/styles/app.css">
-  <link rel="stylesheet" href="./src/styles/news.css">
+  <link rel="stylesheet" href="./src/styles/tips.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <header id="app-header"></header>
@@ -168,6 +168,6 @@
   <footer id="app-footer"></footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script type="module" src="./src/pages/newsPage.js"></script>
+  <script type="module" src="./src/pages/tipsPage.js"></script>
 </body>
 </html>
