--- a/index.html
+++ b/index.html
@@ -107,47 +107,12 @@
           color: #ffc107 !important;
           border: 1px solid rgba(255, 193, 7, 0.45);
         }
-        .news-logo-icon {
-          position: relative;
-          width: 2.45rem;
-          height: 2.45rem;
-          border-radius: 50%;
-          background: radial-gradient(circle at 35% 30%, #67b8ee 0%, #2d7fbd 60%, #1e5c96 100%);
-          border: 2px solid rgba(230, 244, 255, 0.9);
-          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
-          display: inline-flex;
-          align-items: center;
-          justify-content: center;
-          overflow: hidden;
-        }
-        .news-logo-icon::before,
-        .news-logo-icon::after {
-          content: "";
-          position: absolute;
-          border-radius: 999px;
-          border: 1px solid rgba(230, 244, 255, 0.65);
-          pointer-events: none;
-        }
-        .news-logo-icon::before {
-          width: 88%;
-          height: 45%;
-        }
-        .news-logo-icon::after {
-          width: 38%;
-          height: 88%;
-        }
-        .news-logo-badge {
-          position: relative;
-          z-index: 2;
-          padding: 0.08rem 0.2rem;
-          border-radius: 0.34rem;
-          background: linear-gradient(180deg, #ffcf4f 0%, #f4b63f 100%);
-          color: #0d3f7a;
-          font-weight: 900;
-          font-size: 0.44rem;
-          letter-spacing: 0.01em;
-          line-height: 1;
-          border: 1px solid rgba(13, 63, 122, 0.18);
+        .tips-logo-icon {
+          width: 2.7rem;
+          height: 2.7rem;
+          object-fit: contain;
+          display: block;
+          filter: drop-shadow(0 2px 4px rgba(5, 20, 45, 0.28));
         }
           .home-popup-title {
             margin: 0;
@@ -246,12 +211,10 @@
           <div class="position-relative z-1">
             <div class="d-flex align-items-center gap-3 mb-3">
               <div class="feature-icon feature-icon-news mb-0">
-                <span class="news-logo-icon" aria-hidden="true">
-                  <span class="news-logo-badge">СЪВЕТИ</span>
-                </span>
+                <img src="/tips-shield-icon.svg" alt="" class="tips-logo-icon" aria-hidden="true">
               </div>
               <h2 class="home-popup-title">
-                <a href="tips.html" class="home-popup-title-link">Последни съвети</a>
+                <a href="tips.html" class="home-popup-title-link">Актуални съвети</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
