--- a/tips-details.html
+++ b/tips-details.html
@@ -7,38 +7,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StaySafeBG - Детайли за съвет</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./src/styles/theme.css">
   <link rel="stylesheet" href="./src/styles/app.css">
+  <link rel="stylesheet" href="./src/styles/tips-details.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <header id="app-header"></header>
   
-  <main class="container py-4" id="page-content">
-      <nav aria-label="breadcrumb">
+  <main class="container tips-details-page" id="page-content">
+    <div class="tips-details-shell">
+      <div class="tips-breadcrumb mb-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="tips.html">Съвети</a></li>
           <li class="breadcrumb-item active" aria-current="page">Заглавие на съвета</li>
         </ol>
-      </nav>
-      
-      <article class="blog-post">
-        <h2 class="blog-post-title mb-1">Пълно ръководство за фишинг</h2>
-        <p class="blog-post-meta text-muted">1 януари 2026 от <a href="#">Админ</a></p>
-
-        <p>Това е примерно съдържание на целия съвет. В реално приложение, това съдържание ще се зарежда динамично на база ID от URL адреса.</p>
-        <hr>
-        <p>Фишингът е киберпрестъпление, при което целта или целите се свързват по имейл, телефон или текстово съобщение от някой, представящ се за легитимна институция, за да подмами хората да предоставят чувствителни данни като лична информация, данни за банкиране и кредитни карти, и пароли.</p>
-        <h3>Как да предотвратим фишинг атаки</h3>
-        <ul>
-            <li>Бъдете скептични към непоискани съобщения.</li>
-            <li>Проверявайте източника на имейла.</li>
-            <li>Не кликвайте върху линкове и не изтегляйте прикачени файлове от непознати податели.</li>
-        </ul>
-      </article>
-      
-      <div class="mt-5">
-        <a href="tips.html" class="btn btn-secondary">Обратно към съветите</a>
       </div>
+
+      <article class="tips-article-card">
+        <span class="tips-kicker"><i class="bi bi-stars"></i>Практичен съвет</span>
+        <h1 class="tips-title">Пълно ръководство за фишинг</h1>
+
+        <div class="tips-meta">
+          <span class="tips-meta-badge"><i class="bi bi-tag"></i>Категория: Сигурност</span>
+          <span class="tips-meta-badge tips-meta-date"><i class="bi bi-calendar3"></i>1 януари 2026</span>
+        </div>
+
+        <hr class="tips-separator">
+
+        <div class="tips-article-content">
+          Това е примерно съдържание на целия съвет. В реално приложение, това съдържание ще се зарежда динамично на база ID от URL адреса.
+        </div>
+
+        <div class="tips-footer-actions">
+          <a href="tips.html" class="btn btn-outline-secondary"><i class="bi bi-arrow-left me-2"></i>Обратно към съветите</a>
+        </div>
+      </article>
+    </div>
   </main>
   
   <footer id="app-footer"></footer>
