Add AI-generated content label to tips details page with styling for clarity

--- a/tips-details.html
+++ b/tips-details.html
@@ -33,6 +33,8 @@
           <span class="tips-meta-badge tips-meta-date"><i class="bi bi-calendar3"></i>1 януари 2026</span>
         </div>
 
+        <p class="tips-ai-label">Тази статия е генерирана с изкуствен интелект и е с информационна цел. Прегледана е от модератор.</p>
+
         <hr class="tips-separator">
 
         <div class="tips-article-content">
