Update AI label text for clarity and enhance back button styling on tips details page

--- a/tips-details.html
+++ b/tips-details.html
@@ -33,7 +33,7 @@
           <span class="tips-meta-badge tips-meta-date"><i class="bi bi-calendar3"></i>1 януари 2026</span>
         </div>
 
-        <p class="tips-ai-label">Тази статия е генерирана с изкуствен интелект и е с информационна цел. Прегледана е от модератор.</p>
+        <p class="tips-ai-label">Тази статия е генерирана с изкуствен интелект (ИИ) и е само с информационна цел. Прегледана е от модератор.</p>
 
         <hr class="tips-separator">
 
@@ -42,7 +42,7 @@
         </div>
 
         <div class="tips-footer-actions">
-          <a href="tips.html" class="btn btn-outline-secondary"><i class="bi bi-arrow-left me-2"></i>Обратно към съветите</a>
+          <a href="tips.html" class="btn tips-back-btn"><i class="bi bi-arrow-left me-2"></i>Обратно към съветите</a>
         </div>
       </article>
     </div>
