Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@
           border: 1px solid rgba(255, 193, 7, 0.45);
         }
         .tips-logo-icon {
-          width: 2.7rem;
-          height: 2.7rem;
+          width: 2rem;
+          height: 2rem;
           object-fit: contain;
           display: block;
+          transform: scale(2.15);
+          transform-origin: center;
           filter: drop-shadow(0 2px 4px rgba(5, 20, 45, 0.28));
         }
           .home-popup-title {
@@ -211,7 +213,7 @@
           <div class="position-relative z-1">
             <div class="d-flex align-items-center gap-3 mb-3">
               <div class="feature-icon feature-icon-news mb-0">
-                <img src="/tips-shield-icon.svg" alt="" class="tips-logo-icon" aria-hidden="true">
+                <img src="/shield-icon.png" alt="" class="tips-logo-icon" aria-hidden="true">
               </div>
               <h2 class="home-popup-title">
                 <a href="tips.html" class="home-popup-title-link">Актуални съвети</a>
