--- a/admin.html
+++ b/admin.html
@@ -114,6 +114,69 @@
       </div>
 
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
+        <h2 class="mb-0">Управление на фишинг домейни</h2>
+        <button class="btn btn-outline-primary" id="btn-refresh-phishing-domains" type="button">Обнови списъка</button>
+      </div>
+      <div class="row g-3 mb-3">
+        <div class="col-md-8">
+          <label for="phishing-domain-search-input" class="form-label">Търсене</label>
+          <input type="text" class="form-control" id="phishing-domain-search-input" placeholder="Търси по домейн или източник">
+        </div>
+        <div class="col-md-4">
+          <label for="phishing-domain-status-filter" class="form-label">Филтър статус</label>
+          <select class="form-select" id="phishing-domain-status-filter">
+            <option value="all">Всички</option>
+            <option value="active">Само активни</option>
+            <option value="inactive">Само неактивни</option>
+          </select>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <form id="add-phishing-domain-form" class="row g-3">
+            <div class="col-md-4">
+              <label for="phishing-domain-input" class="form-label">Домейн</label>
+              <input type="text" class="form-control" id="phishing-domain-input" placeholder="example-phish.tld" required>
+            </div>
+            <div class="col-md-3">
+              <label for="phishing-domain-source-input" class="form-label">Източник</label>
+              <input type="text" class="form-control" id="phishing-domain-source-input" value="manual">
+            </div>
+            <div class="col-md-2">
+              <label for="phishing-domain-confidence-input" class="form-label">Доверие</label>
+              <input type="number" class="form-control" id="phishing-domain-confidence-input" value="0.95" min="0" max="1" step="0.01">
+            </div>
+            <div class="col-md-3 d-flex align-items-end">
+              <button type="submit" class="btn btn-danger w-100" id="btn-add-phishing-domain">Добави домейн</button>
+            </div>
+            <div class="col-12">
+              <label for="phishing-domain-notes-input" class="form-label">Бележки</label>
+              <input type="text" class="form-control" id="phishing-domain-notes-input" placeholder="Незадължително">
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle" id="admin-phishing-domains-table">
+          <thead>
+            <tr>
+              <th scope="col">Домейн</th>
+              <th scope="col">Източник</th>
+              <th scope="col">Доверие</th>
+              <th scope="col">Статус</th>
+              <th scope="col">Обновен</th>
+              <th scope="col" class="text-end" style="padding-right: 170px;">Действия</th>
+            </tr>
+          </thead>
+          <tbody id="admin-phishing-domains-body">
+            <tr>
+              <td colspan="6" class="text-center text-muted py-4">Зареждане на фишинг домейни...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
         <h2 class="mb-0">Управление на съвети</h2>
         <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
       </div>
