--- a/admin.html
+++ b/admin.html
@@ -205,6 +205,43 @@
         <h2 class="mb-0">Управление на съвети</h2>
         <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
       </div>
+      <div class="row g-3 mb-3">
+        <div class="col-md-6">
+          <label for="admin-articles-search-input" class="form-label">Търсене на съвет</label>
+          <input type="text" class="form-control" id="admin-articles-search-input" placeholder="Търси по заглавие или категория">
+        </div>
+        <div class="col-md-3">
+          <label for="admin-articles-status-filter" class="form-label">Филтър статус</label>
+          <select class="form-select" id="admin-articles-status-filter">
+            <option value="all">Всички</option>
+            <option value="published">Публикувани</option>
+            <option value="draft">Чернови</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label for="admin-articles-category-filter" class="form-label">Филтър категория</label>
+          <select class="form-select" id="admin-articles-category-filter">
+            <option value="all">Всички категории</option>
+            <option value="phishing">Фишинг</option>
+            <option value="shopping">Пазаруване</option>
+            <option value="online_shopping">Онлайн пазаруване</option>
+            <option value="investment">Инвестиции</option>
+            <option value="security">Сигурност</option>
+            <option value="identity_theft">Кражба на самоличност</option>
+            <option value="tech_support">Техническа поддръжка</option>
+            <option value="job_scams">Работа</option>
+            <option value="phone">Телефонна измама</option>
+            <option value="romance">Романтична измама</option>
+            <option value="social">Социални мрежи</option>
+            <option value="crypto">Крипто измама</option>
+            <option value="marketplace">Marketplace измама</option>
+            <option value="other">Друго</option>
+          </select>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          <button type="button" class="btn btn-outline-secondary" id="btn-clear-article-filters">Изчисти филтрите</button>
+        </div>
+      </div>
       <div class="table-responsive">
         <table class="table table-striped table-hover align-middle" id="admin-articles-table">
           <thead>
