--- a/admin.html
+++ b/admin.html
@@ -82,6 +82,9 @@
               <option value="user">Потребител</option>
             </select>
           </div>
+          <div class="col-12 d-flex justify-content-end">
+            <button type="button" class="btn btn-outline-secondary" id="btn-clear-user-filters">Изчисти филтрите</button>
+          </div>
         </div>
         <div class="table-responsive">
           <table class="table table-striped table-hover align-middle" id="admin-users-table">
@@ -107,6 +110,24 @@
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
         <h2 class="mb-0">Управление на доклади</h2>
         <button class="btn btn-outline-primary" id="btn-refresh-reports" type="button">Обнови доклади</button>
+      </div>
+      <div class="row g-3 mb-3">
+        <div class="col-md-8">
+          <label for="admin-reports-search-input" class="form-label">Търсене на доклад</label>
+          <input type="text" class="form-control" id="admin-reports-search-input" placeholder="Търси по тип, обект, категория или статус">
+        </div>
+        <div class="col-md-4">
+          <label for="admin-reports-status-filter" class="form-label">Филтър статус</label>
+          <select class="form-select" id="admin-reports-status-filter">
+            <option value="all">Всички</option>
+            <option value="pending">Чакащи</option>
+            <option value="approved">Потвърдени</option>
+            <option value="rejected">Отхвърлени</option>
+          </select>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          <button type="button" class="btn btn-outline-secondary" id="btn-clear-report-filters">Изчисти филтрите</button>
+        </div>
       </div>
       <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -153,6 +174,9 @@
             <option value="medium">Среден риск</option>
             <option value="high">Висок риск</option>
           </select>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          <button type="button" class="btn btn-outline-secondary" id="btn-clear-phishing-domain-filters">Изчисти филтрите</button>
         </div>
       </div>
       <div class="card mb-3">
